fix: fix visible

--- a/src/assets/scss/blocks/header.scss
+++ b/src/assets/scss/blocks/header.scss
@@ -144,6 +144,8 @@
   }
 }
 
+
+.button.hide-desc,
 .line.hide-desc,
 .menu-mob.hide-desc {
   display: none;
